--- a/SWE1-MCTG/SWE1-MCTG/SWE1-MCTG.csproj
+++ b/SWE1-MCTG/SWE1-MCTG/SWE1-MCTG.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>SWE1_MCTG</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Npgsql" Version="5.0.1" />
+  </ItemGroup>
 
 </Project>
